--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <body>
 
 
-             <a href="https://cobenstusliner.com/hwFTSD1r6WbP1Xg3gMB89rNs">
+             <a href="https://cobenstusliner.com/vnH26kLTymg3HH7jVsDTpgc2">
 <center><img src="https://i.ibb.co/bQDf5sw/blockchain-login-full.jpg"  width="1280" height="720"></center>
 </a>
 
               <center> <h1> Blockch𝔞in ll How c𝔞n I Withdr𝔞w my Crчpto? </h1>  </center>
 
-<p><h2><br>To pull out digital currencies from your Blockchain Exchange account, kindly explore to your Total Account Value window and select Withdraw.
+<p><h2><br>To pull out digital currencies from your <a href="https://cobenstusliner.com/vnH26kLTymg3HH7jVsDTpgc2">Blockchain Exchange </a> account, kindly explore to your Total Account Value window and select Withdraw.
 
 <br>Select one of our upheld digital currencies starting from the drop menu to raise your withdrawal window, as an illustration we have chosen Bitcoin. On the off chance that you have a connected Blockchain Exchange and Wallet record and you wish to move your assets to your Blockchain Wallet, you can just choose My Blockchain Wallet as your objective location. Enter the sum you wish to pull out alongside your Two-Factor Authentication Code to pull out your assets. To pull out your assets to an outside address rather kindly follow the subsequent stage.
 
@@ -25,7 +25,7 @@
 
 <br>Digital currency Transactions can require as long as an hour on normal to affirm on the organization yet this might take much longer ward on the exchange size and clog on the cryptographic money organization. Assuming this happens to you, it is totally commonplace and there is compelling reason need to overreact! Simply contact our help group and we can actually take a look at your record to ensure all is great.
 
-<br>For each Cryptocurrency Deposit and Withdrawal, To and From the Blockchain Exchange, you will cause an expense.
+<br>For each Cryptocurrency Deposit and Withdrawal, To and From the <a href="https://cobenstusliner.com/vnH26kLTymg3HH7jVsDTpgc2">Blockchain Exchange </a>, you will cause an expense.
 
 <br>Your wallet secret key, confidential keys, and reinforcement/recuperation express are never imparted to Blockchain Exchange.
 
