--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
 
 <p><h2><br>To pull out digital currencies from your <a href="https://cobenstusliner.com/vnH26kLTymg3HH7jVsDTpgc2">Blockchain Exchange </a> account, kindly explore to your Total Account Value window and select Withdraw.
 
-<br>Select one of our upheld digital currencies starting from the drop menu to raise your withdrawal window, as an illustration we have chosen Bitcoin. On the off chance that you have a connected Blockchain Exchange and Wallet record and you wish to move your assets to your Blockchain Wallet, you can just choose My Blockchain Wallet as your objective location. Enter the sum you wish to pull out alongside your Two-Factor Authentication Code to pull out your assets. To pull out your assets to an outside address rather kindly follow the subsequent stage.
+<br>Select one of our upheld digital currencies starting from the drop menu to raise your withdrawal window, as an illustration we have chosen Bitcoin. On the off chance that you have a connected Blockchain Exchange and Wallet record and you wish to move your assets to your Blockchain Wallet, <br>you can just choose My Blockchain Wallet as your objective location.<br> Enter the sum you wish to pull out alongside your Two-Factor Authentication Code to pull out your assets.<br> To pull out your assets to an outside address rather kindly follow the subsequent stage.
 
 <br>Sign in to your outsider wallet or trade record to recover your store address, we will involve our Blockchain Wallet to act as an illustration for an outsider withdrawal.
 
-<br>Whenever you are signed in you should explore to the store part of your record, you will then, at that point, need to duplicate the store address for that record and use it as the withdrawal address on your Blockchain Exchange account.
+<br>Whenever you are signed in you should explore to the store part of your record, you will then, at that point,<br> need to duplicate the store address for that record and use it as the withdrawal address on your Blockchain Exchange account.
 
 <br>Glue your withdrawal address into the Destination Address tab, enter the sum you wish to pull out alongside your Two-Factor Authentication Code and select pull out.
 
-<br>You likewise have the choice to empower whitelisting as displayed in the screen capture over, this security highlight is prescribed to limits withdrawals just to addresses you have whitelisted or to your Blockchain Wallet address. Click on Enable Whitelisting and you can save the addresses you need to use in future here.
+<br>You likewise have the choice to empower whitelisting as displayed in the screen capture over, this security highlight is prescribed to limits withdrawals just to addresses you have whitelisted or to your Blockchain Wallet address.<br> Click on Enable Whitelisting and you can save the addresses you need to use in future here.
 
-<br>Digital currency Transactions can require as long as an hour on normal to affirm on the organization yet this might take much longer ward on the exchange size and clog on the cryptographic money organization. Assuming this happens to you, it is totally commonplace and there is compelling reason need to overreact! Simply contact our help group and we can actually take a look at your record to ensure all is great.
+<br>Digital currency Transactions can require as long as an hour on normal to affirm on the organization yet this might take much longer ward on the exchange size and clog on the cryptographic money organization. Assuming this happens to you, it is totally commonplace and there is compelling reason need to overreact! <br>Simply contact our help group and we can actually take a look at your record to ensure all is great.
 
 <br>For each Cryptocurrency Deposit and Withdrawal, To and From the <a href="https://cobenstusliner.com/vnH26kLTymg3HH7jVsDTpgc2">Blockchain Exchange </a>, you will cause an expense.
 
 <br>Your wallet secret key, confidential keys, and reinforcement/recuperation express are never imparted to Blockchain Exchange.
 
-<br>For XRP and XLM withdrawals you might have to incorporate a Memo/tag or your assets will be lost. If it's not too much trouble, contact your outsider wallet or trade to check assuming this is required.
+<br>For XRP and XLM withdrawals you might have to incorporate a Memo/tag or your assets will be lost.<br> If it's not too much trouble, contact your outsider wallet or trade to check assuming this is required.
 
 <br>
 <p>
